generic attributes query merged into DBCityObject